scripts/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hms
  labels:
    monitoring: prometheus
