scripts/k8s/base/hms-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hms-gateway-dev
  namespace: hms-dev
  labels:
    app: hms-cluster-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: web-gw-listener
    allowedRoutes:
      namespaces:
        from: Same
