scripts/k8s/base/hms-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hms-http-route
  namespace: hms-dev
  labels:
    app: hms-http-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: hms-gateway-dev
    namespace: hms-dev
  rules:
  # - matches:
  #   - path:
  #       type: PathPrefix
  #       value: /bm
  #   backendRefs:
  #   - name: hms-bed-monitor-svc-dev
  #     kind: Service
  #     port: 80
  # - matches:
  #   - path:
  #       type: PathPrefix
  #       value: /pm
  #   backendRefs:
  #   - name: hms-patient-mgmt-svc-dev
  #     kind: Service
  #     port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /pos
    backendRefs:
    - name: hms-pos-svc-dev
      kind: Service
      port: 80
